@@ -25,13 +25,13 @@ function contentDeleteFile(fieldname, fid) {
   
   
   // manage file_count, and show the add-more-link
-  var file_count = $("#element-file_count").val();
-  var x = $("#element-file_count").val();
+  var file_count = $("#element-file_count_" + fieldname).val();
+  var x = $("#element-file_count_" + fieldname).val();
   x--;
   if (x < 1) x = 1;
-  $("#element-file_count").val(x);
+  $("#element-file_count_" + fieldname).val(x);
   
-  var file_limit = $("#element-file_limit").val();
+  var file_limit = $("#element-file_limit_" + fieldname).val();
   if (x < file_limit ) {
     // hide the add more link.
     $(".add-more-link-" + fieldname).show();
@@ -49,16 +49,18 @@ function contentDeleteFile(fieldname, fid) {
  */
 function contentAddMoreFile(fieldname) {
   
-  var file_count = $("#element-file_count").val();
-  var file_limit = $("#element-file_limit").val();
+  var file_count = $("#element-file_count_" + fieldname).val();
+  var file_limit = $("#element-file_limit_" + fieldname).val();
+  
+  
   
   var fe = "<div class='add-more-file'><input type='file' name='" + fieldname + "[]' ></div>";
   
-  $('#element-inner-wrapper-attachment').append(fe);
+  $('#element-inner-wrapper-' + fieldname).append(fe);
   
-  var x = $("#element-file_count").val();
+  var x = $("#element-file_count_" + fieldname).val();
   x++;
-  $("#element-file_count").val(x);
+  $("#element-file_count_" + fieldname).val(x);
 
   // if the file count is > than our limit, then we must stop!
   if (file_count >= file_limit - 1) {
